--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 @import url('./signIn and SignUp/signin.css');
 @import url('./signIn and SignUp/signUp.css');
 @import url('./productListing/productListing.css');
+@import url('./wishlist/wishlist.css');
+@import url('./Cart/cart.css');
 :root{
     --color-black:rgb(20 20 20);
     --color-light-black:#141414;
@@ -180,6 +182,7 @@ a:visited{
     background-color: var(--color-black);
     width: 100%;
     height: 4rem;
+    margin-top: 2rem;
 }
 
 .text{
